@@ -10,4 +10,4 @@ URL: http://nongnu.org/gsequencer
 Version: @PACKAGE_VERSION@
 Requires: uuid >= 1.0.1 libxml-2.0 >= 2.8.0 gobject-2.0 >= 2.56.0 glib-2.0 >= 2.56.0 gmodule-2.0 >= 2.56.0 gthread-2.0 >= 2.56.0 gio-2.0 >= 2.56.0 libsoup-2.4 >= 2.52.0
 Libs: -L${libdir} -lags -lags_thread -lags_server
-Cflags: -I${includedir} -include ${includedir}/ags/config.h
+Cflags: -I${includedir}
