@@ -8,6 +8,6 @@ Name: libags-audio
 Description: Advanced Gtk+ Sequencer audio processing engine
 URL: http://nongnu.org/gsequencer
 Version: @PACKAGE_VERSION@
-Requires: uuid >= 1.0.1 libxml-2.0 >= 2.8.0 sndfile >= 1.0.25 libinstpatch-1.0 >= 1.0 gobject-2.0 >= 2.56.0 glib-2.0 >= 2.56.0 gmodule-2.0 >= 2.56.0 gthread-2.0 >= 2.56.0 gio-2.0 >= 2.56.0 libsoup-2.4 >= 2.52.0 libags >= 0.7.62
+Requires: uuid >= 1.0.1 libxml-2.0 >= 2.8.0 sndfile >= 1.0.25 libinstpatch-1.0 >= 1.0 gobject-2.0 >= 2.56.0 glib-2.0 >= 2.56.0 gmodule-2.0 >= 2.56.0 gthread-2.0 >= 2.56.0 gio-2.0 >= 2.56.0 libsoup-2.4 >= 2.52.0 gstreamer-1.0 gstreamer-base-1.0 libags >= 0.7.62
 Libs: -L${libdir} -lags_audio
 Cflags: -I${includedir}
